--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{{ title }}</title>
+	<title>{% block title %} Django E-Commerce {% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link rel="stylesheet" href="assets/bootstrap.min.css" media="screen" />
-	<link rel="stylesheet" href="assets/custom.min.css" media="screen" />
+	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
+	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="" class="navbar-brand">{{ title }}</a>
+          <a href="" class="navbar-brand">{{ title|capfirst}}</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -22,7 +23,7 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li>
-              <a href="#">Início</a>
+              <a href="{% url 'index' %}">Início</a>
             </li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Categorias <span class="caret"></span></a>
@@ -33,7 +34,7 @@
               </ul>
             </li>
 			<li>
-				<a href="contact.html">Contato</a>
+				<a href="{% url 'contact' %}">Contato</a>
 			</li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -43,19 +44,15 @@
       </div>
     </div>
     <div class="container">
-		<div class="jumbotron page-header">
-		  <h1>Django E-Commerce</h1>
-		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		  <p><a class="btn btn-primary">Saiba mais</a></p>
-		</div>
+			{% block container %}{% endblock %}
 		<footer>
 			<div class="row">
 			  <div class="col-lg-12">
 			    <ul class="list-unstyled">
 			      <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
-			      <li><a href="">Início</a></li>
-			      <li><a href="">Produtos</a></li>
-			      <li><a href="">Contato</a></li>
+			      <li><a href="{% url 'index' %}">Início</a></li>
+			      <li><a href="{% url 'product' %}">Produtos</a></li>
+			      <li><a href="{% url 'contact' %}">Contato</a></li>
 			      <li><a href="">Termos e Privacidade</a></li>
 			    </ul>
 			  </div>
@@ -63,6 +60,6 @@
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/bootstrap.min.js"></script>
+    <script src="{% static 'assets/bootstrap.min.js' %}"></script>
 </body>
 </html>
