--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,77 +1,14 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>{{ title }}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
-	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
-</head>
-<body>
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="" class="navbar-brand">{{ title|capfirst}}</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="#">Início</a>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Categorias <span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="download">
-                <li><a href="">Notebooks</a></li>
-				<li><a href="">Acessórios</a></li>
-				<li><a href="">Celulares</a></li>
-              </ul>
-            </li>
-			<li>
-				<a href="contact.html">Contato</a>
-			</li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Minha Conta</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-		<div class="jumbotron page-header">
-		  <h1>{{ title|capfirst}}</h1>
-		  <p>
-        {% for item in texts %}
-            {{item}}
-            {% if not forloop.last %}
-              ,
-            {% endif %}
-        {% endfor %}
+{% extends "base.html" %}
 
-      </p>
-		  <p><a class="btn btn-primary">Saiba mais</a></p>
-		</div>
-		<footer>
-			<div class="row">
-			  <div class="col-lg-12">
-			    <ul class="list-unstyled">
-			      <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
-			      <li><a href="">Início</a></li>
-			      <li><a href="">Produtos</a></li>
-			      <li><a href="">Contato</a></li>
-			      <li><a href="">Termos e Privacidade</a></li>
-			    </ul>
-			  </div>
-			</div>
-		</footer>
-	</div>
-	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="{% static 'assets/bootstrap.min.js' %}"></script>
-</body>
-</html>
+{% block container  %}
+  <div class="jumbotron page-header">
+    <h1>Django E-Commerce</h1>
+    <p>
+      Se hoje é o dia das crianças... Ontem eu disse: o dia da criança é o dia da mãe, dos pais, das professoras, mas também é o dia dos animais, sempre que você olha uma criança, há sempre uma figura oculta, que é um cachorro atrás. O que é algo muito importante!
+    </p>
+    <p>
+Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é... Já vivi muito sem dinheiro, já vivi muito com dinheiro. -Jornalista: Coloca esse dinheiro na poupança que a senhora ganha R$10 mil por mês. -Dilma: O que que é R$10 mil?
+    </p>
+    <p><a class="btn btn-primary">Saiba mais</a></p>
+  </div>
+{% endblock container %}
