--- a/catalog/templates/catalog/category.html
+++ b/catalog/templates/catalog/category.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Listagem de Produtos | {{ block.super }}
+    {{ current_category }} | {{ block.super }}
 {% endblock  %}
 
 {% block container %}
 <div class="page-header">
-  <h1>Produtos</h1>
+  <h1>{{ current_category }}</h1>
 </div>
 <div class="row">
   {% for product in product_list %}
