--- a/catalog/templates/catalog/category.html
+++ b/catalog/templates/catalog/category.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load pagination %}
 {% block title %}
     {{ current_category }} | {{ block.super }}
 {% endblock  %}
@@ -27,4 +27,5 @@
   </div>
   {% endfor %}
 </div>
+{% pagination request paginator page_obj %}
 {% endblock  %}
