--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -54,6 +54,14 @@
       </div>
     </div>
     <div class="container">
+			{% block messages %}
+				{% for message in messages  %}
+				    	<div class="alert alert-{{message.tags}}">
+				    			{{message}}
+				    	</div>
+				{% endfor %}
+
+			{% endblock messages %}
 			{% block container %}{% endblock %}
 		<footer>
 			<div class="row">
