--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -15,6 +15,10 @@
     </a>
   </div>
   <div class="col-sm-8">
+    <p class="text-right">
+        <a href="{% url 'checkout:create_cartitem' product.slug %}"
+        class="btn btn-default" role="button">Adicionar</a>
+    </p>
     {{ product.description|linebreaks }}
   </div>
 </div>
