--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,6 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
+	<link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -41,7 +42,7 @@
 			    </ul>
           <ul class="nav navbar-nav navbar-right">
 						{% if user.is_authenticated %}
-						    <li style="margin-top: 20px; width: 126px; color: white;"><span>Olá, {{ user }}</span></li>
+						    <li style="margin-top: 20px; color: white;"><span>Olá, {{ user }}</span></li>
 						{% endif %}
 						{% if user.is_authenticated %}
 						    <li><a href="{% url 'logout' %}">Sair</a></li>
@@ -49,6 +50,7 @@
 								<li><a href="{% url 'login' %}">Entrar</a></li>
 								<li><a href="{% url 'accounts:register' %}">Registro</a></li>
 						{% endif %}
+							<li><a href="{% url 'checkout:cart_item' %}">Carrinho</a></li>
           </ul>
         </div>
       </div>
@@ -56,7 +58,7 @@
     <div class="container">
 			{% block messages %}
 				{% for message in messages  %}
-				    	<div class="alert alert-{{message.tags}}">
+				    	<div class="alert alert-{{message.tags}} margin-top">
 				    			{{message}}
 				    	</div>
 				{% endfor %}
